[metadata]
name = pysp3c
url = https://github.com/lmar76/pysp3c
version = attr:pysp3c.__version__
author = Luca Mariani
author_email = luca.mariani@esa.int
description = SP3c file reader
long_description = file: README.md
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
test_requires =
    pytest
    pytest-datadir

[options.extras_require]
test =
    pytest
    pytest-datadir

